--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "flowbite": "^2.4.1",
+    "mui-icon": "^0.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18.3.1",
